--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Automated bot used to replace flag icon templates with country names containing hyperlinks in infoboxes of Portuguese Wikipedia articles.",
   "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node bot.js"
   },
   "keywords": [],
   "author": "",
